app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app1
  template:
    metadata:
      labels:
        app: nginx-app1
    spec:
      containers:
      - name: nginx
        image: vishnuvpm/nginx-app1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-app1
spec:
  selector:
    app: nginx-app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
